--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -4,6 +4,7 @@
 
 .q-table__search {
   padding: 0 1px;
+  margin-bottom: 16px;
 }
 
 .q-table__cell {
@@ -413,7 +414,7 @@ tr.q-table-state-visible {
   }
 }
 
-.q-table__heatmap {
+.q-table-colorColumn {
   &-legend {
     height: 32px;
     width: 100%;
@@ -503,8 +504,8 @@ tr.q-table-state-visible {
       display: flex;
       justify-content: flex-start;
       flex-direction: column;
-      margin-top: 16px;
       margin-bottom: 12px;
+      padding: 0 1px;
     }
 
     &--fullwidth {
