--- a/views/cells/cell.html
+++ b/views/cells/cell.html
@@ -5,35 +5,35 @@
       {{tableData[0][loop.index0].footnote.unicode}}
     {%- endif -%}"
   {% endif %} 
-  {% if heatmap.selectedColumn===loop.index0 and heatmap.selectedColumn !==null and not initWithCardLayout %}
-    {% if heatmap.colors[row_loop.index-1].customColor %} 
-      class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}" style="background-color: {{heatmap.colors[row_loop.index-1].customColor}};" 
+  {% if colorColumn.selectedColumn===loop.index0 and colorColumn.selectedColumn !==null and not initWithCardLayout %}
+    {% if colorColumn.colors[row_loop.index-1].customColor %} 
+      class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}" style="background-color: {{colorColumn.colors[row_loop.index-1].customColor}};" 
     {% else %}
-      class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}} {{heatmap.colors[row_loop.index-1].colorClass}}" style="background-color: currentColor;" 
+      class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}} {{colorColumn.colors[row_loop.index-1].colorClass}}" style="background-color: currentColor;" 
     {% endif %}
   {% else %}
     class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}" 
   {% endif %}>
 
   {%- if cell.footnote %}
-    {%- if heatmap.selectedColumn===loop.index0 and heatmap.selectedColumn !==null and not initWithCardLayout -%}
-      <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation {{ heatmap.colors[row_loop.index-1].textColor }}">
+    {%- if colorColumn.selectedColumn===loop.index0 and colorColumn.selectedColumn !==null and not initWithCardLayout -%}
+      <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation {{ colorColumn.colors[row_loop.index-1].textColor }}">
     {% else %}
       <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation">
     {%- endif -%}      
   {% else %}
-    {%- if heatmap.selectedColumn===loop.index0 and heatmap.selectedColumn !==null and not initWithCardLayout -%}
-      <span class="{{ heatmap.colors[row_loop.index-1].textColor }}">
+    {%- if colorColumn.selectedColumn===loop.index0 and colorColumn.selectedColumn !==null and not initWithCardLayout -%}
+      <span class="{{ colorColumn.colors[row_loop.index-1].textColor }}">
     {% else %}
       <span>
     {%- endif -%}      
   {%- endif -%}
-  {%- if heatmap.selectedColumn===loop.index0 and heatmap.selectedColumn !==null %}
-    {%- if heatmap.heatmapType === "numerical" -%}
-      {%- if heatmap.formattedValues[row_loop.index0] === null or heatmap.formattedValues[row_loop.index0] === undefined  -%}
+  {%- if colorColumn.selectedColumn===loop.index0 and colorColumn.selectedColumn !==null %}
+    {%- if colorColumn.colorColumnType === "numerical" -%}
+      {%- if colorColumn.formattedValues[row_loop.index0] === null or colorColumn.formattedValues[row_loop.index0] === undefined  -%}
         --
       {%- else -%}
-        {{heatmap.formattedValues[row_loop.index0]}}  
+        {{colorColumn.formattedValues[row_loop.index0]}}  
       {%- endif -%}    
     {%- else -%}  
       {{cell.value}}  
