--- a/views/legend.html
+++ b/views/legend.html
@@ -1,73 +1,76 @@
 {% if colorColumn.colorColumnType === "numerical" %}
 <!-- display numerical legend -->
-<div class="q-table-colorColumn-legend--numerical">
-    <div class="s-legend-icon-label q-table-colorColumn-legend-container q-table-colorColumn-legend-container--desktop">
-        <div class="q-table-colorColumn-legend-value-container">
-            <span
-                class="q-table-colorColumn-legend-value-container--minVal s-font-note s-font-note--tabularnums">{{colorColumn.legendData.minValue}}</span>
-            <span
-                class="q-table-colorColumn-legend-value-container--maxVal s-font-note s-font-note--tabularnums">{{colorColumn.legendData.maxValue}}</span>
-        </div>
-        <div class="q-table-colorColumn-legend-border-container">
-            <svg class="q-table-colorColumn-legend">
-                <g>
-                    {% for bucket in colorColumn.legendData.buckets %}
-                    {% set bucket_loop = loop %}
-                    {% set bucket_width = ((bucket.to - bucket.from) * 100) / (colorColumn.legendData.maxValue
-                    -colorColumn.legendData.minValue) %}
-                    {% set aspectXValue = ((bucket.from - colorColumn.legendData.minValue) * 100) /
-                    (colorColumn.legendData.maxValue - colorColumn.legendData.minValue) %}
-                    {% if bucket.color.customColor %}
-                    <rect class="q-table-colorColumn-legend-bucket" style="color: {{bucket.color.customColor}}"
-                        width="{{bucket_width}}%" height="16" x="{{aspectXValue}}%" y="12" />
-                    {% else %}
-                    <rect class="q-table-colorColumn-legend-bucket {{bucket.color.colorClass}}"
-                        width="{{bucket_width}}%" height="16" x="{{aspectXValue}}%" y="12" />
-                    {%- endif -%}
-                    {% endfor %}
-                </g>
-            </svg>
-            <div class="q-table-colorColumn-legend-borders s-color-gray-6"></div>
-        </div>
-    </div>
-    {%- if colorColumn.legendData.hasSingleValueBucket or colorColumn.legendData.hasNullValues -%}
-    <div class="s-legend-icon-label">
-        {%- if colorColumn.legendData.hasSingleValueBucket -%}
-        <div class="s-legend-item-label__item q-table-colorColumn-legend-info--single-bucket">
-            <svg width="11" height="11" {%- if noInteraction -%}
-                class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon q-table-colorColumn-legend-info-icon--no-interactive">
-                {%- else -%}
-                class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon
-                q-table-colorColumn-legend-info-icon--interactive">
-                {%- endif -%}
-                <rect width="11" height="11" {% if colorColumn.legendData.buckets[0].color.customColor %}
-                    class="q-table-colorColumn-legend-bucket"
-                    style="color: {{colorColumn.legendData.buckets[0].color.customColor}}" />
-                {% else %}
-                class="q-table-colorColumn-legend-bucket {{colorColumn.legendData.buckets[0].color.colorClass}}" />
-                {% endif %}
-            </svg>
-            <div class="s-legend-item-label__item__label s-font-note--tabularnums">
-                = {{colorColumn.legendData.buckets[0].from}}
+<div class="q-table-colorColumn-legend-container q-table-colorColumn-legend-container--desktop">
+    <div class="q-table-colorColumn-legend--numerical">
+        <div
+            class="s-legend-icon-label">
+            <div class="q-table-colorColumn-legend-value-container">
+                <span
+                    class="q-table-colorColumn-legend-value-container--minVal s-font-note s-font-note--tabularnums">{{colorColumn.legendData.minValue}}</span>
+                <span
+                    class="q-table-colorColumn-legend-value-container--maxVal s-font-note s-font-note--tabularnums">{{colorColumn.legendData.maxValue}}</span>
+            </div>
+            <div class="q-table-colorColumn-legend-border-container">
+                <svg class="q-table-colorColumn-legend">
+                    <g>
+                        {% for bucket in colorColumn.legendData.buckets %}
+                        {% set bucket_loop = loop %}
+                        {% set bucket_width = ((bucket.to - bucket.from) * 100) / (colorColumn.legendData.maxValue -
+                        colorColumn.legendData.minValue) %}
+                        {% set aspectXValue = ((bucket.from - colorColumn.legendData.minValue) * 100) /
+                        (colorColumn.legendData.maxValue - colorColumn.legendData.minValue) %}
+                        {% if bucket.color.customColor %}
+                        <rect class="q-table-colorColumn-legend-bucket" style="color: {{bucket.color.customColor}}"
+                            width="{{bucket_width}}%" height="16" x="{{aspectXValue}}%" y="12" />
+                        {% else %}
+                        <rect class="q-table-colorColumn-legend-bucket {{bucket.color.colorClass}}"
+                            width="{{bucket_width}}%" height="16" x="{{aspectXValue}}%" y="12" />
+                        {%- endif -%}
+                        {% endfor %}
+                    </g>
+                </svg>
+                <div class="q-table-colorColumn-legend-borders s-color-gray-6"></div>
             </div>
         </div>
-        {% endif %}
-        {%- if colorColumn.legendData.hasNullValues -%}
-        <div class="s-legend-item-label__item q-table-colorColumn-legend-info--no-data ">
-            <svg width="11" height="11" {%- if noInteraction -%}
-                class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon q-table-colorColumn-legend-info-icon--no-interactive">
-                {%- else -%}
-                class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon
-                q-table-colorColumn-legend-info-icon--interactive">
-                {%- endif -%}
-                <rect width="11" height="11" class="s-color-gray-4" fill="white" stroke="currentColor"
-                    stroke-width="2" />
-            </svg>
-            <div class="s-legend-item-label__item__label">Keine Daten</div>
+        {%- if colorColumn.legendData.hasSingleValueBucket or colorColumn.legendData.hasNullValues -%}
+        <div class="s-legend-icon-label">
+            {%- if colorColumn.legendData.hasSingleValueBucket -%}
+            <div class="s-legend-item-label__item q-table-colorColumn-legend-info--single-bucket">
+                <svg width="11" height="11" {%- if noInteraction -%}
+                    class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon q-table-colorColumn-legend-info-icon--no-interactive">
+                    {%- else -%}
+                    class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon
+                    q-table-colorColumn-legend-info-icon--interactive">
+                    {%- endif -%}
+                    <rect width="11" height="11" {% if colorColumn.legendData.buckets[0].color.customColor %}
+                        class="q-table-colorColumn-legend-bucket"
+                        style="color: {{colorColumn.legendData.buckets[0].color.customColor}}" />
+                    {% else %}
+                    class="q-table-colorColumn-legend-bucket {{colorColumn.legendData.buckets[0].color.colorClass}}" />
+                    {% endif %}
+                </svg>
+                <div class="s-legend-item-label__item__label s-font-note--tabularnums">
+                    = {{colorColumn.legendData.buckets[0].from}}
+                </div>
+            </div>
+            {% endif %}
+            {%- if colorColumn.legendData.hasNullValues -%}
+            <div class="s-legend-item-label__item q-table-colorColumn-legend-info--no-data ">
+                <svg width="11" height="11" {%- if noInteraction -%}
+                    class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon q-table-colorColumn-legend-info-icon--no-interactive">
+                    {%- else -%}
+                    class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon
+                    -table-colorColumn-legend-info-icon--interactive">
+                    {%- endif -%}
+                    <rect width="11" height="11" class="s-color-gray-4" fill="white" stroke="currentColor"
+                        stroke-width="2" />
+                </svg>
+                <div class="s-legend-item-label__item__label">Keine Daten</div>
+            </div>
+            {% endif %}
         </div>
         {% endif %}
     </div>
-    {% endif %}
 </div>
 {% else %}
 <!-- display categorical legend -->
