--- a/views/cells/cell.html
+++ b/views/cells/cell.html
@@ -6,7 +6,7 @@
     {%- endif -%}"
   {% endif %} 
   {% if colorColumn.selectedColumn===loop.index0 and colorColumn.selectedColumn !==null and not initWithCardLayout %}
-    {% if colorColumn.colors[row_loop.index-1].customColor %} 
+    {% if colorColumn.colors[row_loop.index0].customColor %} 
       class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}" style="background-color: {{colorColumn.colors[row_loop.index-1].customColor}};" 
     {% else %}
       class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}} {{colorColumn.colors[row_loop.index-1].colorClass}}" style="background-color: currentColor;" 
@@ -19,6 +19,7 @@
     {%- if cell.footnote -%}
         <div>
           <span class="{{ colorColumn.colors[row_loop.index-1].textColor }}">
+            {{colorColumn.colors[row_loop.index0].customColor}}
             {%- if colorColumn.colorColumnType === "numerical" -%}
               {%- if colorColumn.formattedValues[row_loop.index0] === null or colorColumn.formattedValues[row_loop.index0] === undefined  -%}
                 --
