--- a/views/legend.html
+++ b/views/legend.html
@@ -28,9 +28,34 @@
                         {%- endif -%}
                         {% endfor %}
                     </g>
+                    {%- if colorColumn.legendData.labelLegend.label !== 'noLabel' -%}
+                    <g>
+                      <circle
+                        cx="{{colorColumn.legendData.labelLegend.position}}%"
+                        cy="20"
+                        r="4"
+                        stroke="white"
+                        stroke-width="1"
+                        fill="none" />
+                      <rect
+                        class="s-color-gray-9"
+                        fill="currentColor"
+                        width="0.5px"
+                        height="16"
+                        x="{{colorColumn.legendData.labelLegend.position}}%"
+                        y="20" />
+                    </g>
+                    {%- endif -%}
                 </svg>
                 <div class="q-table-colorColumn-legend-borders s-color-gray-6"></div>
             </div>
+            {%- if colorColumn.legendData.labelLegend.label !== 'noLabel' -%}
+                <div
+                class="q-table-colorColumn-legend-marker s-font-note s-font-note--tabularnums"
+                style="{{colorColumn.legendData.labelLegend.descriptionAlignment}}">
+                    {{colorColumn.legendData.labelLegend.label}}: {{colorColumn.legendData.labelLegend.value}}
+                </div>
+            {% endif %}
         </div>
         {%- if colorColumn.legendData.hasSingleValueBucket or colorColumn.legendData.hasNullValues -%}
         <div class="s-legend-icon-label">
@@ -46,7 +71,7 @@
                         class="q-table-colorColumn-legend-bucket"
                         style="color: {{colorColumn.legendData.buckets[0].color.customColor}}" />
                     {% else %}
-                    class="q-table-colorColumn-legend-bucket {{colorColumn.legendData.buckets[0].color.colorClass}}" />
+                        class="q-table-colorColumn-legend-bucket {{colorColumn.legendData.buckets[0].color.colorClass}}" />
                     {% endif %}
                 </svg>
                 <div class="s-legend-item-label__item__label s-font-note--tabularnums">
@@ -59,11 +84,9 @@
                 <svg width="11" height="11" {%- if noInteraction -%}
                     class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon q-table-colorColumn-legend-info-icon--no-interactive">
                     {%- else -%}
-                    class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon
-                    -table-colorColumn-legend-info-icon--interactive">
+                        class="s-legend-item-label__item__icon q-table-colorColumn-legend-info-icon-table-colorColumn-legend-info-icon--interactive">
                     {%- endif -%}
-                    <rect width="11" height="11" class="s-color-gray-4" fill="white" stroke="currentColor"
-                        stroke-width="2" />
+                    <rect width="11" height="11" class="s-color-gray-4" fill="white" stroke="currentColor" stroke-width="2" />
                 </svg>
                 <div class="s-legend-item-label__item__label">Keine Daten</div>
             </div>
