--- a/src/styles/q-table.scss
+++ b/src/styles/q-table.scss
@@ -1,7 +1,3 @@
-.q-table {
-  opacity: 1 !important;
-}
-
 .q-table__search {
   padding: 0 1px;
   margin-bottom: 16px;
@@ -22,8 +18,8 @@ td.q-table__cell--numeric {
 
 // the high specificty is needed because nzz frontends apply lots of highly specific table styles we need to overwrite
 // this will change in the future and allow us to lower the specificity here again
-.q-table {
-  table:not(.q-table-methods-legend-table) {
+.q-table-holder {
+  .q-table {
     border-collapse: collapse;
     border: none;
     margin: 0;
@@ -47,7 +43,7 @@ td.q-table__cell--numeric {
     }
 
     tbody tr,
-    thead tr {
+    thead {
       border-width: 0 0 1px 0;
       border-style: solid;
       border-color: #e9e9ee;
@@ -55,102 +51,36 @@ td.q-table__cell--numeric {
   }
 }
 // when the text-column follows a numeric-column, the text-column should have a padding for spacing reasons
-.q-table:not(.q-table--card-layout) .q-table__cell--numeric:not(#q-table-minibar-header) + .q-table__cell:not(.q-table__cell--numeric) {
+.q-table-holder:not(.q-table--card-layout) .q-table__cell--numeric:not(#q-table-minibar-header) + .q-table__cell:not(.q-table__cell--numeric) {
   padding-left: 20px;
 }
 
+/**
+ * CARD LAYOUT
+ */
 .q-table--card-layout {
-  table {
-    border: 0;
-  }
-  table thead {
-    border: none;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-  table tr {
-    transition: transform 0.2s ease-in;
-    padding-top: 3px;
-    padding-bottom: 3px;
+  .q-table--card-row {
+    border-bottom: 1px solid #e9e9ee;
+
     &:first-child {
       padding-top: 0;
     }
   }
-  table td {
-    display: block;
-  }
-  table th,
-  table td {
+
+  .q-table--card-cell {
+    display: flex;
+    justify-content: space-between;
     padding: 4px 0 !important; // overwrite the padding from outside card-layout
   }
 
-  tbody:first-child {
-    td {
-      text-align: left !important;
-    }
+  .q-table--card-cell-title {
+    font-weight: 500;
+    max-width: 80%;
+    text-align: left !important;
   }
 
-  // apply the label pseudo element and changed text-align only if we have a head
-  // we do not have a head if the option hideTableHeader is set to true
-  thead + tbody {
-    td {
-      text-align: right !important;
-    }
-    td::before {
-      /*
-      * aria-label has no advantage, it won't be read inside a table
-      content: attr(aria-label);
-      */
-      content: attr(data-label);
-      float: left;
-      font-weight: 500;
-      max-width: 80%;
-      text-align: left !important;
-    }
-    td::after {
-      content: '';
-      display: block;
-      clear: both;
-    }
-  }
-  tbody tr:last-child {
-    border-bottom: 0;
-  }
-
-  .q-table-minibar-cell,
-  .q-table-minibar-bar--negative,
-  .q-table-minibar-bar--positive {
-    display: none !important;
-  }
-
-  .q-table-minibar-cell--value {
-    background-color: white;
-    display: block !important;
-  }
-
-  .q-table-minibar--mixed {
-    background-color: white;
-    width: 100% !important;
-  }
-
-  .q-table-minibar-alignment--positive {
-    float: none;
-    width: 100% !important;
-  }
-
-  .q-table-minibar-alignment--empty {
-    text-align: right !important;
-  }
-
-  .q-table-minibar-alignment--negative {
-    text-align: right !important;
-    float: none;
-    left: 0;
+  .q-table--card-cell-value {
+    text-align: right;
   }
 
   .q-table-footnote-column-card-layout--single {
