--- a/src/styles/q-table.scss
+++ b/src/styles/q-table.scss
@@ -5,10 +5,30 @@
 
 .q-table__cell {
   text-align: left !important;
+
+  > span {
+    display: inline-block;
+    position: relative;
+
+    .q-table-footnote-annotation {
+      color: #6e6e7e;
+      font-size: 10px;
+      margin-left: 1px;
+      margin-top: -5.5px;
+      position: absolute;
+    }
+
+    .q-table-footnote-annotation-colored-column {
+      color: unset;
+    }
+  }
 }
 
 .q-table__cell--numeric {
   text-align: right !important;
+
+  // extra spacing in case of footnotes. also generally looks nice
+  padding: 10px 12px !important;
 }
 
 // only td should not break, th of --numeric columns are allowed to wrap
@@ -207,60 +227,60 @@ tr.q-table-state-frozen {
   width: 100%;
 }
 
-.q-table-footnote {
-  &-index {
-    vertical-align: super;
-    display: inline-block;
-    margin-right: 4px;
-  }
+// .q-table-footnote {
+//   &-index {
+//     vertical-align: super;
+//     display: inline-block;
+//     margin-right: 4px;
+//   }
 
-  &-annotation {
-    position: relative;
-    display: block;
-    width: 100%;
+//   &-annotation {
+//     position: relative;
+//     display: block;
+//     width: 100%;
 
-    &--colorColumn {
-      font-size: 11px;
-      left: 100%;
-      position: absolute;
-      top: -7px;
+//     &--colorColumn {
+//       font-size: 11px;
+//       left: 100%;
+//       position: absolute;
+//       top: -7px;
 
-      sup {
-        color: currentColor;
-        opacity: 0.65;
-      }
-    }
-  }
+//       sup {
+//         color: currentColor;
+//         opacity: 0.65;
+//       }
+//     }
+//   }
 
-  &-annotation::after {
-    content: attr(data-annotation);
-    position: absolute;
-    color: #6e6e7e;
-    margin-left: 1px;
-    margin-top: -5.5px;
-    font-size: 9px;
-  }
+//   &-annotation::after {
+//     content: attr(data-annotation);
+//     position: absolute;
+//     color: #6e6e7e;
+//     margin-left: 1px;
+//     margin-top: -5.5px;
+//     font-size: 9px;
+//   }
 
-  &-column {
-    &--single {
-      padding-right: 8px !important;
+//   &-column {
+//     &--single {
+//       padding-right: 8px !important;
 
-      > span {
-        /* Need this so the annotation footnotes can be positioned correctly. */
-        display: inline-block;
-        position: relative;
-      }
-    }
+//       > span {
+//         /* Need this so the annotation footnotes can be positioned correctly. */
+//         display: inline-block;
+//         position: relative;
+//       }
+//     }
 
-    &--double {
-      padding-right: 16px !important;
-    }
-  }
+//     &--double {
+//       padding-right: 16px !important;
+//     }
+//   }
 
-  &-footer {
-    margin-top: 4px;
-  }
-}
+//   &-footer {
+//     margin-top: 4px;
+//   }
+// }
 
 .q-table-methods {
   &--no-interaction {
